[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/inter-bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/inter.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Countdown Timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Inter-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.866667, 0.0666667, 0.0666667, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="text" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Hello [color=#bada55]my[/color] [b]fucking[/b] [color=red]world[/color]"
text = "Hello my fucking world"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 700.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
context_menu_enabled = false
caret_blink = true

[node name="Panel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 0 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 33.0

[node name="stats" type="Label" parent="VBoxContainer/HBoxContainer/Panel/CenterContainer"]
margin_left = 20.0
margin_top = 6.0
margin_right = 266.0
margin_bottom = 20.0
text = "Time: 13s Errors 100 Completed 100%"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Countdown Timer" parent="CenterContainer" instance=ExtResource( 4 )]
autostart = true

[node name="countdown" type="Label" parent="CenterContainer"]
margin_left = 491.0
margin_top = 261.0
margin_right = 532.0
margin_bottom = 339.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="debug" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/input" to="." method="_on_input_text_changed"]
[connection signal="last_timeout" from="CenterContainer/Countdown Timer" to="." method="_on_Countdown_Timer_last_timeout"]
[connection signal="timeout" from="CenterContainer/Countdown Timer" to="." method="_on_Countdown_Timer_timeout"]
